--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="wrapper">
 
       <div id="circle-text">
-        <div id="quote">
+        <div id="quote" class="hidden">
           <div id="quote-text"></div>
           <div id="quote-author"></div>
         </div>
